fix: footer links colors on dark mode

--- a/docs/.vuepress/theme/styles/theme-dark.styl
+++ b/docs/.vuepress/theme/styles/theme-dark.styl
@@ -15,6 +15,11 @@
 	        color: $textColorDark;
         }
 
+        // Footer
+        footer a {
+            color: $textColor;
+        }
+
         // Search
         header.navbar .links .search-box input {
             color: $textColorDark;
@@ -34,7 +39,6 @@
                     color: $headingColorDark;
                 }
             }
-            
         }
 
         // DocSearch
